fixed image bug on mobile

--- a/main.css
+++ b/main.css
@@ -3682,7 +3682,7 @@
             }
 
             .help>img[data-v-6a87e8fa] {
-                bottom: 65px;
+                bottom: 10px;
                 width: 70vw;
                 min-width: 350px
             }
